WorkFlow/k8s/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: workflow-engine-mtls
  namespace: default
spec:
  selector:
    matchLabels:
      app: workflow-engine
  mtls:
    mode: STRICT
